<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Played"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:maxLines="3"
            android:text="@string/stats_match"
            android:textColor="@android:color/black"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/Played2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Truc a modifier"
            android:textColor="@android:color/black"
            android:maxLines="3"  />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Winned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:maxLines="3"
            android:text="@string/stats_match_won"
            android:textColor="@android:color/black"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/Winned2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Truc a modifier"
            android:textColor="@android:color/black"
            android:maxLines="3"  />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Lost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:maxLines="3"
            android:text="@string/stats_match_lost"
            android:textColor="@android:color/black"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/Lost2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Truc a modifier"
            android:textColor="@android:color/black"
            android:maxLines="3"  />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Incoming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:maxLines="3"
            android:text="@string/stats_match_incomming"
            android:textColor="@android:color/black"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/Incoming2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Truc a modifier"
            android:textColor="@android:color/black"
            android:maxLines="3"  />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ratioWin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:maxLines="3"
            android:text="@string/stats_match_ratio"
            android:textColor="@android:color/black"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/ratioWin2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Truc a modifier"
            android:textColor="@android:color/black"
            android:maxLines="3"  />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="vertical">

        <Button
            android:id="@+id/Home"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#ff4259"
            android:padding="20dp"
            android:text="@string/stats_back" />

        <Button
            android:id="@+id/deconnexion"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#ff4259"
            android:padding="20dp"
            android:text="@string/stats_logout" />

    </LinearLayout>

</LinearLayout>